Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2705,7 +2705,8 @@ font-weight: bold !important;
 }
 
 .custom_ui_13884_13886,
-.custom_ui_13884_13886 .container,
+.custom_ui_13884_13886 body,
+.custom_ui_13884_13886 .fixed-top,
 .custom_ui_13884_13886 .table-striped tbody tr,
 .custom_ui_13884_13886 .x-list,
 .custom_ui_13884_13886 .accordion .card,
@@ -2842,7 +2843,8 @@ font-weight: bold !important;
 
 .custom_ui_13884_13885,
 .custom_ui_13884_13885 .standard-bg,
-.custom_ui_13884_13885 .container,
+.custom_ui_13884_13885 body,
+.custom_ui_13884_13885 .fixed-top,
 .custom_ui_13884_13885 .chat-title span,
 .custom_ui_13884_13885 div.dropdown-item,
 .custom_ui_13884_13885 .mid-text-line span
@@ -3502,9 +3504,9 @@ h4.css__title{
 }
 
 .large-frame{
-    width: 80%;
-    marging-left: 10%;
-    padding: 10px;
+    width: 89%;
+    marging-left: 0 auto;
+    padding: 5px;
 }
 
 .sidebar a.css__title {
